tests/typing/bad/testfile-tuple3.rs


fn main() {
    let x = 3;
    let y = x.1;
}